<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/select_entertainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="118dp"
        android:background="@color/orange"
        android:onClick="entertainmentSelect"
        android:text="@string/entertainments" />

    <Button
        android:id="@+id/select_attraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_entertainment"
        android:layout_alignTop="@+id/select_entertainment"
        android:layout_marginTop="44dp"
        android:background="@color/orange"
        android:text="@string/attractions" 
        android:onClick="attractionSelect"/>

    <Button
        android:id="@+id/select_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select_attraction"
        android:layout_alignTop="@+id/select_attraction"
        android:layout_marginTop="44dp"
        android:background="@color/orange"
        
        android:text="@string/restaurants" 
        android:onClick="restaurantSelect"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select_entertainment"
        android:layout_alignLeft="@+id/select_entertainment"
        android:layout_alignParentRight="true"
        android:src="@drawable/city2" />

</RelativeLayout>
